# analyzer

./: .bandit  .cursorrules  .dockerignore  .gitignore  .gitmodules  .pr_v040.md  .ruff.toml  BACKLOG_MVP_ANALYZER.json  CHANGELOG.md  COST_ASSUMPTIONS.json  COST_MODEL.md  COST_MODEL_SCENARIOS.csv  Dockerfile  EPIC_B_GITHUB_MANAGEMENT.md  EPIC_COMPLETION_REPORT.md  EPIC_E3_COMPLETION_REPORT.md  EPIC_F1_COMPLETION_REPORT.md  INSTRUCTIONS.md  README.md  README_DEPLOY.md  TESTING_GUIDE.md  WIKI_MANAGEMENT.md  baseline_performance.json  ci-analyzer.yml  create_gh_issues_from_json.mjs  create_github_issues.py  docker-compose.yml  find_project_id.mjs  generate_tests.py  get_project_id.sh  highlights.csv  highlights.json  metrics_server.py  performance_results.json  prometheus.yml  pyproject.toml  run_create_issues.sh  setup.ps1  setup.py  setup.sh  (+4 more)
analyzer/: .gitignore  pyproject.toml
config/: Dockerfile  docker-compose.yml
deploy/: README.md
docs/: CI_CD.md  DOCKER.md  MANUAL_DOWNLOAD_MIGRATION.md  MONITORING.md  SETUP.md  TESTING_SUMMARY.md  TESTSPRITE.md
schemas/: analysis-result.json
scripts/: profile_performance.py
tests/: conftest.py  conftest_testsprite.py.example  test_analyzer.py  test_audio_generated.py  test_audio_security.py  test_beat_quantization_f1.py  test_beats.py  test_beats_generated.py  test_cancellation_e3.py  test_cli_contract_e1.py  test_config_generated.py  test_core_generated.py  test_dynamic_cropper.py  test_edge_cases_generated.py  test_export_generated.py  test_integration_f1.py  test_integration_f2.py  test_integration_generated.py  (+23 more)
(+34 files in other folders)
