[project]
name = "analyzer"
version = "0.1.0"
description = "MVP Analyzer - AI-powered music video highlight extraction tool"
readme = "README.md"
authors = [
    { name = "TerryBerk", email = "radygin.konstantin.s@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "click>=8.0.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rich>=13.0.0,<14.0.0",
    "scipy>=1.10.0,<2.0.0",
    "librosa>=0.10.0,<1.0.0",
    "soundfile>=0.12.0,<1.0.0",
    "memory-profiler>=0.61.0",
    "psutil>=7.1.1",
    "jsonschema>=4.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[project.scripts]
analyzer = "analyzer.cli:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
